<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.skytasul</groupId>
	<artifactId>beautyquests-parent</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<name>BeautyQuests</name>
	<description>A Spigot quests plugin based on a simple-to-use graphical
		interface.</description>
	<url>https://github.com/SkytAsul/BeautyQuests/</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>SkytAsul</name>
			<email>skytasul@gmail.com</email>
			<url>https://github.com/SkytAsul</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/SkytAsul/BeautyQuests.git</connection>
		<developerConnection>scm:git:ssh://github.com:SkytAsul/BeautyQuests.git</developerConnection>
		<url>http://github.com/SkytAsul/BeautyQuests/tree/master</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.release>17</maven.compiler.release>

		<build.number>unknown</build.number>
		<revision.raw>2.1.0</revision.raw>

		<!-- Sometimes not the latest version since MockBukkit is long to update -->
		<minecraft.version>1.21.10-R0.1-SNAPSHOT</minecraft.version>

		<junit.version>6.0.1</junit.version>
		<mockbukkit.version.minecraft>1.21</mockbukkit.version.minecraft>
		<mockbukkit.version>4.98.0</mockbukkit.version>

		<lamp.version>4.0.0-rc.13</lamp.version>
		<xseries.version>13.6.0</xseries.version>
		<hikaricp.version>6.0.0</hikaricp.version>
		<fastboard.version>2.1.5</fastboard.version>
		<commons-lang.version>2.6</commons-lang.version>

		<!--
			Version of Adventure included in Paper 1.17.1.
			Since we cannot load a different Adventure version,
			we've got to comply with this one.
		-->
		<adventure.version>4.9.3</adventure.version>
		<adventure.bukkit.version>4.0.1</adventure.bukkit.version>
	</properties>

	<profiles>
		<profile>
			<id>devbuild</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<plugin.version>${revision.raw}+build.${build.number}</plugin.version>
				<revision>${revision.raw}-SNAPSHOT</revision>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<properties>
				<plugin.version>${revision.raw}</plugin.version>
				<revision>${revision.raw}</revision>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>codemc-nms</id>
			<url>https://repo.codemc.io/repository/nms/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>skytasul</id>
			<url>https://repo.codemc.org/repository/skytasul/</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>core</module>
		<module>paper</module>
		<module>integrations</module>
		<module>v1_17_R1</module>
		<module>v1_18_R1</module>
		<module>v1_18_R2</module>
		<module>v1_19_R1</module>
		<module>v1_19_R2</module>
		<module>v1_19_R3</module>
		<module>v1_20_R1</module>
		<module>v1_20_R2</module>
		<module>v1_20_R3</module>
		<module>v1_20_R4</module>
		<module>v1_21_R1</module>
		<module>v1_21_R3</module>
		<module>v1_21_R4</module>
		<module>v1_21_R5</module>
		<module>v1_21_R6</module>
		<module>v1_21_R7</module>
		<module>dist</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
